agrego ef packages + connection to  db

--- a/WebApiAutores/appsettings.json
+++ b/WebApiAutores/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AutoresDb": "Host=localhost;Database=autoresdb;Port=5434;Username=admin;Password=123"
+  }
 }
